--- a/src/lib/Header/Header.scss
+++ b/src/lib/Header/Header.scss
@@ -52,3 +52,12 @@ nav{
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
 }
+
+.basket-text {
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+}
