--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 nav{
     height: 6rem;
-    background-color:#f73c00;
+    background-color:#fff;
 }
 
 .logo {
@@ -12,32 +12,31 @@ nav{
 .navbar {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    padding: 0 1rem;
+    height:100%;
 }
 
 .nav-item {
-    display: inline-block;
-    padding: 0.5rem 1rem;
+    display: flex;
     align-items: center;
-    text-align: center;
-    color: #fff;
+    justify-content: space-between;
+    color: #555;
     text-decoration: none;
+    height: 100%;
+    flex-flow: column nowrap;
 }
 
 .title {
     font-size: 2em;
     font-weight: bold;
     cursor:pointer;
-    text-align: center;
+    margin-top: 10px;
 }
 
 .menu {
-    justify-self: center;
     width:100%;
     display:flex;
     flex-direction:row;
     justify-content:center;
-    margin-top: 0.8rem;
 }
 
 .menu-item {
@@ -45,22 +44,24 @@ nav{
     padding: 0.5rem 1rem;
     align-items: center;
     text-align: center;
-    color: #fff;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: bold;
     cursor: pointer;
     user-select: none;
+    box-sizing: border-box;
+    height:100%;
 
     &:hover {
-        background-color: #fff;
-        color: #f73c00;
+        background-color: #555;
+        color: #fff;
     }
 }
 
 .user-controls {
+    display:flex;
+    justify-content: center;
     height:100%;
-    line-height: 4rem;
 }
 
 .icons {
